--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<a class="navbar-brand text-white" href="#nav"><img src="/images/monogram2.png" alt="monogram"></a>
+			<a class="navbar-brand text-white" href="#nav"><img src="./images/monogram2.png" alt="monogram"></a>
 			<div class="collapse navbar-collapse" id="navbarText">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
