Missing stylesheet and index

--- a/index2_sideexp.html
+++ b/index2_sideexp.html
@@ -51,7 +51,7 @@
 		</nav>
 		Navigation-->
 	</div>
-	<div class="container-fluid" id="top">
+	<div class="container" id="top">
 		<!--Lead In-->
 		<div class="jumbotron jumbotron-fluid mt-4 pb-5 rounded">
 			<div class="row my-2 pl-4 pr-0">
@@ -65,9 +65,10 @@
 				</div>
 			</div>
 		</div>
-			
-		<div class="row">
-			<div class="col" >
+	</div>
+	<div class="container">
+		<div class="row"  >
+			<div class="col-8 offset-2 col-sm-6 sm-offset-0 col-md-4 md-offset-0">
 				<a class="btn" data-toggle="collapse" data-target="#experience" aria-expanded="true" aria-controls="experience" onclick="collapse1()">
 					<img src="./images/compicon.png" class="card-img-top" style="width: 100%; height: auto;" alt="computer icon">
 					<br>
@@ -76,7 +77,7 @@
 					</span></h2>
 				</a>	
 			</div>
-			<div class="col">
+			<div class="col-8 offset-2 col-sm-6 sm-offset-0 col-md-4 md-offset-0">
 				<a class="btn" data-toggle="collapse" data-target="#skills" aria-expanded="false" aria-controls="skills" onclick="collapse2()">
 					<img src="./images/codeicon.png" class="card-img-top" style="width: 100%; height: auto;" alt="code icon">
 					<br>
@@ -85,7 +86,7 @@
 					</span></h2>
 				</a>
 			</div>
-			<div class="col">
+			<div class="col-8 offset-2 col-sm-6 sm-offset-0 col-md-4 md-offset-0">
 				<a class="btn" data-toggle="collapse" data-target="#about" aria-expanded="false" aria-controls="about" onclick="collapse3()">
 					<img src="./images/cofficon.png" class="card-img-top" style="width: 100%; height: auto;" alt="coffee icon"> 
 					<br>
@@ -94,7 +95,10 @@
 					</span></h2>
 				</a>
 			</div>
+			
+			
 		</div>
+	</div>
 		<!--/Lead In-->
 		
 		<!--Experience-->
