--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <body>
    <!--Page Content -->
 	
-	<div class="container-fluid footer fixed-top" style="text-align: right">
+	<div class="container-fluid footer fixed-top" style="text-align: right; max-height: ;">
 		<a class="button popover-dismiss" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="left" data-content="Top" href="#top">
-		<img src="./images/uparrow.png" class="py-2" style="width: 5%; height: auto;" alt="colorful circles"> 
+		<img src="./images/uparrow.png" class="py-1 img-fluid" style="max-width: 50px; height: auto" alt="up arrow"> 
 		</a>
 		
 	</div>
@@ -70,7 +70,7 @@
 		<div class="row">
 			<div class="col-8 col-sm-6 col-md-4 mx-auto">
 				<a class="btn" href="#experience" data-toggle="collapse" data-target="#experience" aria-expanded="true" aria-controls="experience" onclick="collapse1()">
-					<img src="./images/compicon.png" class="card-img-top" style="width: 100%; height: auto;" alt="computer icon">
+					<img src="./images/compicon.png" class="card-img-top" style="width:99%; height: auto;" alt="computer icon">
 					<br>
 					<h2><span class="badge badge-pill">
 						Experience
@@ -79,7 +79,7 @@
 			</div>
 			<div class="col-8 col-sm-6 col-md-4 mx-auto">
 				<a class="btn" data-toggle="collapse" data-target="#skills" aria-expanded="false" aria-controls="skills" onclick="collapse2()">
-					<img src="./images/codeicon.png" class="card-img-top" style="width: 100%; height: auto;" alt="code icon">
+					<img src="./images/codeicon.png" class="card-img-top" style="width:99%; height: auto;" alt="code icon">
 					<br>
 					<h2><span class="badge badge-pill px-4">
 						Skillset
@@ -88,7 +88,7 @@
 			</div>
 			<div class="col-8 col-sm-6 col-md-4 mx-auto">
 				<a class="btn" data-toggle="collapse" data-target="#about" aria-expanded="false" aria-controls="about" onclick="collapse3()">
-					<img src="./images/cofficon.png" class="card-img-top" style="width: 100%; height: auto;" alt="coffee icon"> 
+					<img src="./images/cofficon.png" class="card-img-top" style="width:99%; height: auto;" alt="coffee icon"> 
 					<br>
 					<h2><span class="badge badge-pill">
 						Work Style
@@ -222,13 +222,13 @@
 	</div> <!--closing container-fluid so footer will span entire viewport-->
 	<!--Footer-->
 	<footer>
-		<div class="d-flex justify-content-end align-items-end flex-row footer">
+		<div class="d-flex justify-content-end align-items-end flex-row footer mt-4">
 			<div class="mr-auto p-2">
 			Visit me on <a href="https://www.linkedin.com/in/mbyse/" role="button">LinkedIn</a><br />
 				See my projects on <a href="https://github.com/mbyse" role="button">GitHub</a></p>
 			</div>
 			<div class="p-2">
-				<img class="" style="" src="./images/artdeco_200.png" alt="colorful circles">
+				<img class="" style="max-height: 100px; width: auto;" src="./images/artdeco_200.png" alt="colorful circles">
 			</div>
 		</div>
 			
